add minimal style header

--- a/scss/components/component-mega-menu.scss
+++ b/scss/components/component-mega-menu.scss
@@ -146,7 +146,7 @@
         display: inline-block;
     }
 
-    .header__menu  .icon-arrow {
+    .header__menu  .icon-arrow-right {
         display: none;
     }
 
