--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -107,6 +107,7 @@
 	margin: auto!important;
 	flex: inherit!important;
 	text-align: center;
+	overflow: hidden;
 	svg {
 		margin-bottom: 2rem;
 	}
