--- a/sections/cart-recommend.liquid
+++ b/sections/cart-recommend.liquid
@@ -14,8 +14,8 @@
                     {% endif %}
                 {%- endfor -%}
             </ul>
-            <div class="swiper-button-prev">{% render 'icon-prev' %}</div>
-            <div class="swiper-button-next">{% render 'icon-next' %}</div>
+            <div class="swiper-button-prev">{% render 'icons-svg', icons: 'prev' %}</div>
+            <div class="swiper-button-next">{% render 'icons-svg', icons: 'next' %}</div>
         </div>
     </div>
 {%- endif -%}
