--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -418,7 +418,7 @@
         </div>
     </div>
     <scroll-up class="footer__scroll-up button button--secondary" aria-label="{{ 'sections.footer.scroll_up' | t }}">
-        {% render 'icon-caret' %}
+        {% render 'icons-svg', icons: 'up' %}
     </scroll-up>
 </footer>
 
