--- a/snippets/mega-menu-three-nav.liquid
+++ b/snippets/mega-menu-three-nav.liquid
@@ -29,18 +29,18 @@
                             <span class='js-mega-menu-title' href='{{ column_url }}'>{{ column_title | escape }}</span>
                             {% endif %}
                             <button class='mega-menu__next-button js-mega-submenu-next-button' aria-expanded='true'>
-                                {% render 'icon-arrow' %}
+                                {% render 'icons-svg', icons: 'arrow-right' %}
                             </button>
                         </div>
                     {% endif %}
                     <div class='mega-menu__submenu js-mega-submenu' tabindex='-1'>
                     <div class='mega-menu__back'>
                         <button class='mega-menu__back-button js-submenu-back' aria-expanded='true'>
-                        {% render 'icon-caret' %}
+                        {% render 'icons-svg', icons: 'down' %}
                         {{ column_title | escape }}
                         </button>
                         <a class='mega-menu__back-close js-menu-toggle' href='#MobileMenuClose' aria-label='{{ 'accessibility.menu_close' | t }}'>
-                        {% render 'icon-close' %}
+                        {% render 'icons-svg', icons: 'close' %}
                         </a>
                     </div>
                     <ul class='mega-menu__list' tabindex='-1'>
@@ -95,17 +95,17 @@
                         href="{{ link.url }}"
                     >
                         {{ link.title }}
-                        {% render 'icon-caret' %}
+                        {% render 'icons-svg', icons: 'down' %}
                     </a>
                     <button class="mega-menu__next-button js-mega-parent-next-button" aria-expanded="true">
-                        {% render 'icon-arrow' %}
+                        {% render 'icons-svg', icons: 'arrow-right' %}
                     </button>
                 </div>
                 <div style="{{ mega_menu_styles }}" class="mega-menu js-mega-menu" tabindex="-1">
                     <div class="mega-menu__wrapper page-width">
                         <div class="mega-menu__back">
                             <button class="mega-menu__back-button js-menu-back" aria-expanded="true">
-                                {% render 'icon-caret' %}
+                                {% render 'icons-svg', icons: 'down' %}
                                 {{ link.title | escape }}
                             </button>
                             <a
@@ -113,7 +113,7 @@
                                 href="#MobileMenuClose"
                                 aria-label="{{ 'accessibility.menu_close' | t }}"
                             >
-                                {% render 'icon-close' %}
+                                {% render 'icons-svg', icons: 'close' %}
                             </a>
                         </div>
                         <div class="mega-menu__row">
