--- a/snippets/social-list.liquid
+++ b/snippets/social-list.liquid
@@ -1,53 +1,92 @@
-<ul class='list-social list-unstyled' role='list'>
+<ul class="list-social list-unstyled" role="list">
     {% if settings.social_twitter_link != blank %}
-        <li class='list-social__item'>
+        <li class="list-social__item">
             <a
-                href='{{ settings.social_twitter_link }}'
-                class='link list-social__link'
-                title='Twitter'
-                aria-describedby='a11y-external-message'
+                href="{{ settings.social_twitter_link }}"
+                class="link list-social__link"
+                title="{{ 'general.social.links.twitter' | t }}"
+                aria-describedby="a11y-external-message"
             >
-                <i class='fa fa-twitter' aria-hidden='true'></i>
-                <span class='visually-hidden'>{{ 'general.social.links.twitter' | t }}</span>
+                {% render 'icons-svg', icons: 'twitter' %}
+                <span class="visually-hidden">{{ 'general.social.links.twitter' | t }}</span>
             </a>
         </li>
     {% endif %}
     {% if settings.social_facebook_link != blank %}
-        <li class='list-social__item'>
+        <li class="list-social__item">
             <a
-                href='{{ settings.social_facebook_link }}'
-                class='link list-social__link'
-                title='Facebook'
-                aria-describedby='a11y-external-message'
+                href="{{ settings.social_facebook_link }}"
+                class="link list-social__link"
+                title="{{ 'general.social.links.facebook' | t }}"
+                aria-describedby="a11y-external-message"
             >
-                <i class='fa fa-facebook' aria-hidden='true'></i>
-                <span class='visually-hidden'>{{ 'general.social.links.facebook' | t }}</span>
+                {% render 'icons-svg', icons: 'facebook' %}
+                <span class="visually-hidden">{{ 'general.social.links.facebook' | t }}</span>
             </a>
         </li>
     {% endif %}
     {% if settings.social_pinterest_link != blank %}
-        <li class='list-social__item'>
+        <li class="list-social__item">
             <a
-                href='{{ settings.social_pinterest_link }}'
-                class='link list-social__link'
-                title='Pinterest'
-                aria-describedby='a11y-external-message'
+                href="{{ settings.social_pinterest_link }}"
+                class="link list-social__link"
+                title="{{ 'general.social.links.pinterest' | t }}"
+                aria-describedby="a11y-external-message"
             >
-                <i class='fa fa-pinterest' aria-hidden='true'></i>
-                <span class='visually-hidden'>{{ 'general.social.links.pinterest' | t }}</span>
+                {% render 'icons-svg', icons: 'pinterest' %}
+                <span class="visually-hidden">{{ 'general.social.links.pinterest' | t }}</span>
             </a>
         </li>
     {% endif %}
     {% if settings.social_instagram_link != blank %}
-        <li class='list-social__item'>
+        <li class="list-social__item">
             <a
-                href='{{ settings.social_instagram_link }}'
-                class='link list-social__link'
-                title='Instagram'
-                aria-describedby='a11y-external-message'
+                href="{{ settings.social_instagram_link }}"
+                class="link list-social__link"
+                title="{{ 'general.social.links.instagram' | t }}"
+                aria-describedby="a11y-external-message"
             >
-                <i class='fa fa-instagram' aria-hidden='true'></i>
-                <span class='visually-hidden'>{{ 'general.social.links.instagram' | t }}</span>
+                {% render 'icons-svg', icons: 'instagram' %}
+                <span class="visually-hidden">{{ 'general.social.links.instagram' | t }}</span>
+            </a>
+        </li>
+    {% endif %}
+    {% if settings.social_linkedin_link != blank %}
+        <li class="list-social__item">
+            <a
+                href="{{ settings.social_linkedin_link }}"
+                class="link list-social__link"
+                title="{{ 'general.social.links.linkedin' | t }}"
+                aria-describedby="a11y-external-message"
+            >
+                {% render 'icons-svg', icons: 'linkedin' %}
+                <span class="visually-hidden">{{ 'general.social.links.linkedin' | t }}</span>
+            </a>
+        </li>
+    {% endif %}
+    {% if settings.social_whatsapp_link != blank %}
+        <li class="list-social__item">
+            <a
+                href="{{ settings.social_whatsapp_link }}"
+                class="link list-social__link"
+                title="{{ 'general.social.links.whatsapp' | t }}"
+                aria-describedby="a11y-external-message"
+            >
+                {% render 'icons-svg', icons: 'whatsapp' %}
+                <span class="visually-hidden">{{ 'general.social.links.whatsapp' | t }}</span>
+            </a>
+        </li>
+    {% endif %}
+    {% if settings.social_youtube_link != blank %}
+        <li class="list-social__item">
+            <a
+                href="{{ settings.social_youtube_link }}"
+                class="link list-social__link"
+                title="{{ 'general.social.links.youtube' | t }}"
+                aria-describedby="a11y-external-message"
+            >
+                {% render 'icons-svg', icons: 'youtube' %}
+                <span class="visually-hidden">{{ 'general.social.links.youtube' | t }}</span>
             </a>
         </li>
     {% endif %}
