--- a/scss/sections/section-header.scss
+++ b/scss/sections/section-header.scss
@@ -265,7 +265,50 @@ details-open.open #userLinks {
 }
 
 //style header
-
+.style-simple, .style-simple-logo-center {
+    &.sticky-header-false {
+        box-shadow:none;
+    }
+    &.transparent-header {
+        position: absolute!important;
+        left: 0;
+        top: 0;
+        width: 100%;
+        background: none;
+    }
+    position: relative;
+    box-shadow: none;
+    &.sticky-header-true {
+        .header-main.scrolled-past-header {
+            position: fixed;
+            width: 100%;
+            left: 0;
+            top: 0;
+            box-shadow:0 .4rem .5rem rgba(0,0,0,.1);
+            background-color: var(--header-background-color);
+            .minimal-logo-col,
+            .minimal-elements-col {
+                display: flex!important;
+                opacity: 1;
+                z-index: auto;
+            }
+        }
+    }
+    &.sticky-header-false {
+        .header-main {
+            position: relative!important;
+            width: 100%;
+            left: 0;
+            top: 0;
+            box-shadow:none;
+            background-color: transparent;
+        }
+    }
+    &.transparent-header {
+        position: absolute!important;
+        background-color: transparent;
+    }
+}
 .style-simple-logo-center {
     @media screen and (min-width: 992px) {
         .header__logo-wrapper {
@@ -276,8 +319,7 @@ details-open.open #userLinks {
 
 .style-minimal {
     .header-main {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
+        padding: 0;
     }
 
     .header-menu-outer {
@@ -286,13 +328,19 @@ details-open.open #userLinks {
             text-align: left;
         }
     }
+
+    details-open.open #settingsBox, details-open.open #userLinks {
+        margin-top: 1.7rem;
+    }
+
     .minimal-social-col {
         display: none!important;
     }
+
     .list-social {
         display: flex;
         .list-social__item {
-            margin-right: 8px;
+            margin-right: 12px;
         }
         .list-social__link {
             display: block;
@@ -303,16 +351,15 @@ details-open.open #userLinks {
             vertical-align: middle;
         }
     }
-    .minimal-logo-col,
-    .minimal-elements-col {
-        opacity: 0;
-        z-index: -1;
-        position: relative;
+
+    
+    .header-wrap {
         display: none!important;
     }
     @media screen and (min-width: 992px) {
         .header-main {
             padding-bottom: 0;
+            padding-top: 1.5rem;
         }
         .minimal-social-col {
             display: flex!important;
@@ -357,48 +404,97 @@ details-open.open #userLinks {
         }
         
         .header-wrap {
-            margin-bottom: 2.4rem;
+            margin-bottom: .5rem;
+            display: flex!important;
         }
+
         .minimal-logo-col,
         .minimal-elements-col {
             display: flex!important;
         }
-        &.show {
-            .header-wrap {
-                opacity: 0;
-                height: 0;
-                margin: 0;
-                z-index: -1;
-            }
+        .minimal-logo-col,
+        .minimal-elements-col {
+            opacity: 0;
+            z-index: -1;
+            position: relative;
+        }
+    }
+    .header-menu-outer {
+        display: block;
+        padding-bottom: 1.5rem;
+        padding-top: 1.5rem;
+    }
+    position: relative;
+    box-shadow: none;
+    &.sticky-header-true {
+        .header-menu-outer.scrolled-past-header {
+            position: fixed;
+            width: 100%;
+            left: 0;
+            top: 0;
+            box-shadow:0 .4rem .5rem rgba(0,0,0,.1);
+            background-color: var(--header-background-color);
             .minimal-logo-col,
             .minimal-elements-col {
+                display: flex!important;
                 opacity: 1;
                 z-index: auto;
-                display: flex!important;
             }
         }
-        
+    }
+    &.sticky-header-false {
         .header-menu-outer {
-            display: block;
+            position: relative!important;
+            width: 100%;
+            left: 0;
+            top: 0;
+            box-shadow:none;
+            background-color: transparent;
+        }
+    }
+    &.transparent-header {
+        position: absolute!important;
+        background-color: transparent;
+        .header-wrap {
+            border-bottom: none;
+            padding-top: 1.5rem;
             padding-bottom: 1.5rem;
         }
     }
 }
 
 .style-multi-row {
+    .top-header,.header-wrap {
+        display: none!important;
+    }
+
+    .header-menu-outer {
+        padding: 1.5rem 0;
+    }
+    details-open.open #settingsBox, details-open.open #userLinks {
+        margin-top: 1.7rem;
+    }
+
     @media screen and (min-width: 992px) {
+        .top-header,.header-wrap {
+            display: flex!important;
+        }
+        details-open.open #settingsBox, details-open.open #userLinks {
+            margin-top: 1.5rem;
+        }
         .header-wrap {
-            padding-bottom: 1.5rem;
-            padding-top: 1.5rem;
+            padding-bottom: 2.5rem;
+            padding-top: 2.5rem;
             border-bottom: 1px solid var(--header-line-color);
         }
+
         .header-menu-outer {
-            padding-bottom: 1.5rem;
-            padding-top: 1.5rem;
+            .header__logo-wrapper {
+                display: none;
+            }
             position: relative;
-            
             &:before {
-                content: "";
+                //content: "";
                 box-shadow: inset 0 12px 12px 5px var(--header-line-color);
                 display: block;
                 position: absolute;
@@ -457,5 +553,162 @@ details-open.open #userLinks {
         .simple-menu.mega-menu--open {
             margin-top: 1.5rem;
         }
+
+        .top-header {
+            padding: 1rem 0;
+            background: var(--color-light);
+        }
+
+        .top-header__info {
+            margin: 0;
+            list-style: none;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            color: var(--color-body-text);
+
+            li {
+                font-size: 12px;
+                margin-right: 2rem;
+                line-height: 2rem;
+            }
+
+            a {
+                color: var(--color-body-text);
+                text-decoration: none;
+                display: inline-block;
+                &:hover {
+                    color: var(--color-link-hover-text);
+                }
+            }
+
+            svg {
+                width: 18px;
+                height: 18px;
+                display: inline-block;
+                vertical-align: middle;
+                margin-right: 4px;
+            }
+
+            .icon-envelope {
+                width: 20px;
+                height: 20px;
+            }
+             
+            .icon-envelope,
+            .icon-calendar,
+            .icon-phone {
+                position: relative;
+                top: -2px;
+            }
+        }
+
+        .top-header__icon-blocks {
+            display: flex;
+            align-items: center;
+            font-size: 12px;
+            line-height: 20px;
+
+            .top-icon-button {
+                padding-left: 20px;
+
+                svg {
+                    width: 2rem;
+                    height: 2rem;
+                    display: inline-block;
+                    vertical-align: middle;
+                    margin-right: 4px;
+                }
+
+                a {
+                    text-decoration: none;
+                    display: block;
+                    color: var(--color-body-text);
+                    &:hover {
+                        color: var(--color-link-hover-text);
+                    }
+                }
+
+                .text {
+                    font-style: normal;
+                    margin-right: 4px;
+                }
+
+                span {
+                    font-size: 13px;
+                    display: inline-block;
+                    line-height: 20px;
+                    text-align: center;
+                    padding: 0 0;
+                    width: 20px;
+                    border-radius: 50px;
+                    background: var(--color-info);
+                    margin-left: 4px;
+                    color: var(--color-dark);
+                }
+
+                .compare_total {
+
+                    svg {
+                        width: 22px;
+                        height: 22px;
+                        position: relative;
+                        top: -1px;
+                    }
+                }
+            }
+        }
+        
+    }
+    position: relative;
+    box-shadow: none;
+    &.sticky-header-true {
+        .header-menu-outer.scrolled-past-header {
+            position: fixed;
+            width: 100%;
+            left: 0;
+            top: 0;
+            box-shadow:0 .4rem .5rem rgba(0,0,0,.1);
+            background-color: var(--header-background-color);
+        }
+    }
+    &.sticky-header-false {
+        .header-menu-outer {
+            position: relative!important;
+            width: 100%;
+            left: 0;
+            top: 0;
+            box-shadow:none;
+            background-color: transparent;
+        }
+    }
+    &.transparent-header {
+        position: absolute!important;
+        background-color: transparent;
+        .header-wrap {
+            border-bottom: none;
+            padding-top: 1.5rem;
+            padding-bottom: 1.5rem;
+        }
+    }
+}
+
+.sticky-header-placeholder {
+    display: none;
+}
+
+.scrolled-past-header+.sticky-header-placeholder {
+    display: block;
+}
+
+.sticky-header-false {
+    .sticky-header-placeholder {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    #MainContent {
+        padding-top: var(--top-header-height);
     }
 }
