--- a/snippets/header-elements.liquid
+++ b/snippets/header-elements.liquid
@@ -1,3 +1,9 @@
+{% liquid
+    assign enable_currency = settings.enable_currency
+    assign enable_language = settings.enable_language
+    assign compare = settings.link_compare
+    assign wishlist = settings.link_wishlist
+%}
 <nav class="header__menu--right">
     <ul class="header__menu-list">
         <li class="header__menu-item header__menu-item--search">
@@ -30,101 +36,111 @@
                                     <a href="{{ link.url }}">{{ link.title }}</a>
                                 </li>
                             {% endfor %}
-                            <li>
-                                <a href="/pages/wishlist">{{ 'pages.wishlist' | t }}</a>
-                            </li>
-                            <li>
-                                <a href="/pages/compare">{{ 'pages.compare' | t }}</a>
-                            </li>
+                            {% if compare != blank %}
+                                <li>
+                                    <a href="{{ compare }}">{{ 'pages.wishlist' | t }}</a>
+                                </li>
+                            {% endif %}
+                            {% if wishlist != blank %}
+                                <li>
+                                    <a href="{{ wishlist }}">{{ 'pages.compare' | t }}</a>
+                                </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </details-open>
             </li>
         {% endif %}
-        <li class="header__menu-item header__menu-item--params">
-            <details-open>
-                <a
-                    class="header__menu-item-link js-summary"
-                    href="#"
-                >
-                    {% render 'icons-svg', icons: 'params' %}
-                </a>
-                <div id="settingsBox" class="settings-box js-details">
-                    <div class="currency-picker">
-                        <span class="h6">Select Currency:</span>
-                        <localization-form>
-                            {% form 'localization', id: 'CurrencyForm', class: 'localization-form' %}
-                                <div class="no-js-hidden">
-                                    <ul
-                                        id="CurrencyList"
-                                        role="list"
-                                        class="header__menu-select list-unstyled"
-                                    >
-                                        {%- for currency in shop.enabled_currencies -%}
-                                            <li class="localization-form__item">
-                                                <a
-                                                    class="link link--text localization-form{% if currency == cart.currency %} active{% endif %} focus-inset"
-                                                    href="#"
-                                                    lang="{{ currency.iso_code }}"
-                                                    {% if currency == cart.currency %}
-                                                        aria-current="true"
-                                                    {% endif %}
-                                                    data-value="{{ currency.iso_code }}"
-                                                >
-                                                    {{ currency.iso_code -}}
-                                                    {{- currency.symbol }}
-                                                </a>
-                                            </li>
-                                        {%- endfor -%}
-                                    </ul>
-                                    <input
-                                        type="hidden"
-                                        name="currency_code"
-                                        value="{{ localization.country.iso_code }}"
-                                    >
-                                </div>
-                            {% endform %}
-                        </localization-form>
+        {% if enable_currency != blank or enable_language != blank %}
+            <li class="header__menu-item header__menu-item--params">
+                <details-open>
+                    <a
+                        class="header__menu-item-link js-summary"
+                        href="#"
+                    >
+                        {% render 'icons-svg', icons: 'params' %}
+                    </a>
+                    <div id="settingsBox" class="settings-box js-details">
+                        {% if enable_currency != blank %}
+                            <div class="currency-picker">
+                                <span class="h6">{{ 'header.currency' | t }}:</span>
+                                <localization-form>
+                                    {% form 'localization', id: 'CurrencyForm', class: 'localization-form' %}
+                                        <div class="no-js-hidden">
+                                            <ul
+                                                id="CurrencyList"
+                                                role="list"
+                                                class="header__menu-select list-unstyled"
+                                            >
+                                                {%- for currency in shop.enabled_currencies -%}
+                                                    <li class="localization-form__item">
+                                                        <a
+                                                            class="link link--text localization-form{% if currency == cart.currency %} active{% endif %} focus-inset"
+                                                            href="#"
+                                                            lang="{{ currency.iso_code }}"
+                                                            {% if currency == cart.currency %}
+                                                                aria-current="true"
+                                                            {% endif %}
+                                                            data-value="{{ currency.iso_code }}"
+                                                        >
+                                                            {{ currency.iso_code -}}
+                                                            {{- currency.symbol }}
+                                                        </a>
+                                                    </li>
+                                                {%- endfor -%}
+                                            </ul>
+                                            <input
+                                                type="hidden"
+                                                name="currency_code"
+                                                value="{{ localization.country.iso_code }}"
+                                            >
+                                        </div>
+                                    {% endform %}
+                                </localization-form>
+                            </div>
+                        {% endif %}
+                        {% if enable_language != blank %}
+                            <div class="language-picker">
+                                <span class="h6">{{ 'header.language' | t }}:</span>
+                                <localization-form>
+                                    {%- form 'localization', id: 'LanguageForm', class: 'localization-form' -%}
+                                        <div class="no-js-hidden">
+                                            <ul
+                                                id="LanguageList"
+                                                role="list"
+                                                class="header__menu-select list-unstyled"
+                                            >
+                                                {%- for language in localization.available_languages -%}
+                                                    <li class="localization-form__item">
+                                                        <a
+                                                            class="link link--text localization-form{% if language.iso_code == localization.language.iso_code %} active{% endif %} focus-inset"
+                                                            href="#"
+                                                            hreflang="{{ language.iso_code }}"
+                                                            lang="{{ language.iso_code }}"
+                                                            {% if language.iso_code == localization.language.iso_code %}
+                                                                aria-current="true"
+                                                            {% endif %}
+                                                            data-value="{{ language.iso_code }}"
+                                                        >
+                                                            {{ language.endonym_name | capitalize }}
+                                                        </a>
+                                                    </li>
+                                                {%- endfor -%}
+                                            </ul>
+                                            <input
+                                                type="hidden"
+                                                name="locale_code"
+                                                value="{{ localization.language.iso_code }}"
+                                            >
+                                        </div>
+                                    {%- endform -%}
+                                </localization-form>
+                            </div>
+                        {% endif %}
                     </div>
-                    <div class="language-picker">
-                        <span class="h6">Select Language:</span>
-                        <localization-form>
-                            {%- form 'localization', id: 'LanguageForm', class: 'localization-form' -%}
-                                <div class="no-js-hidden">
-                                    <ul
-                                        id="LanguageList"
-                                        role="list"
-                                        class="header__menu-select list-unstyled"
-                                    >
-                                        {%- for language in localization.available_languages -%}
-                                            <li class="localization-form__item">
-                                                <a
-                                                    class="link link--text localization-form{% if language.iso_code == localization.language.iso_code %} active{% endif %} focus-inset"
-                                                    href="#"
-                                                    hreflang="{{ language.iso_code }}"
-                                                    lang="{{ language.iso_code }}"
-                                                    {% if language.iso_code == localization.language.iso_code %}
-                                                        aria-current="true"
-                                                    {% endif %}
-                                                    data-value="{{ language.iso_code }}"
-                                                >
-                                                    {{ language.endonym_name | capitalize }}
-                                                </a>
-                                            </li>
-                                        {%- endfor -%}
-                                    </ul>
-                                    <input
-                                        type="hidden"
-                                        name="locale_code"
-                                        value="{{ localization.language.iso_code }}"
-                                    >
-                                </div>
-                            {%- endform -%}
-                        </localization-form>
-                    </div>
-                </div>
-            </details-open>
-        </li>
+                </details-open>
+            </li>
+        {% endif %}
         <li class="header__menu-item header__menu-item--cart">
             <a
                 href="{{ routes.cart_url }}"
