--- a/snippets/header-style-minimal.liquid
+++ b/snippets/header-style-minimal.liquid
@@ -1,5 +1,12 @@
-<div class="header-main">
-    <header class="header-wrap  d-flex align-items-center">
+{% liquid
+    assign logo = settings.logo
+    assign logo_alt = settings.logo.alt | default: shop.name | escape
+    assign logo_width = settings.logo_width
+    assign logo_height = settings.logo_width | divided_by: settings.logo.aspect_ratio
+%}
+
+<header class="header-main js-header-main">
+    <div class="header-wrap  d-flex align-items-center">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-4 col-md-4 col-lg-5 d-flex align-self-center minimal-social-col">
@@ -58,16 +65,27 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-6 col-md-6 col-lg-5 icons-col text-right d-flex align-self-center justify-content-end">
-                    {% render 'header-elements', blocks: blocks %}
+                    {% render 'header-elements', blocks: blocks, topmenu: topmenu, settings: settings %}
                 </div>
             </div>
         </div>
-    </header>
+    </div>
 
-    <div class="header-menu-outer">
+    <div class="header-menu-outer section-header">
         <div class="container">
             <div class="row">
-                <div class="col-5 col-sm-5 col-md-2 col-lg-3 align-self-center justify-content-start d-flex minimal-logo-col">
+                <div class="col-5 col-sm-5 col-md-3 col-lg-3 align-self-center justify-content-start d-flex minimal-logo-col">
+                    <div class="header__icon-open">
+                        <a
+                            class="js-menu-toggle focus-inset"
+                            data-id="MegaMenu"
+                            href="#MobileMenuOpen"
+                            aria-label="{{ 'accessibility.menu_open' | t }}"
+                        >
+                            {% render 'icons-svg', icons: 'menu' %}
+                        </a>
+                    </div>
+                    <span class="header__menu--overlay js-mobile-menu-overlay"></span>
                     <div class="header__logo-wrapper">
                         {% if request.page_type == 'index' %}
                             <h1 class="header__heading">
@@ -112,9 +130,10 @@
                     {% render 'header-navigation', menu: menu, blocks: blocks %}
                 </div>
                 <div class="col-6 col-sm-6 col-md-4 col-lg-3 align-self-center icons-col text-right d-flex justify-content-end minimal-elements-col">
-                    {% render 'header-elements', blocks: blocks %}
+                    {% render 'header-elements', blocks: blocks, topmenu: topmenu, settings: settings %}
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="sticky-header-placeholder js-sticky-block"></div>
+</header>
